Adds more AI names

--- a/Spellthrowers/Base.lproj/Main_iPad.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPad.storyboard
@@ -1085,8 +1085,8 @@ Cg
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="qxs-qb-Ymr"/>
-        <segue reference="4Hu-9s-myn"/>
-        <segue reference="xtH-0g-WeU"/>
+        <segue reference="nlE-49-7RB"/>
         <segue reference="Cb9-uf-PYS"/>
+        <segue reference="xtH-0g-WeU"/>
     </inferredMetricsTieBreakers>
 </document>
