--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1116,16 +1116,6 @@
                                     <segue destination="SEj-FN-gUh" kind="modal" id="59v-Qr-Qev"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" ambiguous="YES" misplaced="YES" text="damage if a spell is played." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6E-7C-vUj">
-                                <rect key="frame" x="64" y="278" width="243" height="23.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="24" id="SpC-wi-Ism"/>
-                                    <constraint firstAttribute="width" constant="243" id="bnu-t9-nHe"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="                     reflects spell " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nug-MS-oxF">
                                 <rect key="frame" x="65" y="258" width="239" height="24"/>
                                 <constraints>
@@ -1207,13 +1197,23 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="hasFacedown.png" translatesAutoresizingMaskIntoConstraints="NO" id="EcI-be-bDL">
-                                <rect key="frame" x="16" y="187" width="32" height="16"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="hasFacedown.png" translatesAutoresizingMaskIntoConstraints="NO" id="EcI-be-bDL">
+                                <rect key="frame" x="16" y="187" width="26" height="16"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="acr-3E-9RJ"/>
+                                    <constraint firstAttribute="width" constant="26" id="acr-3E-9RJ"/>
                                     <constraint firstAttribute="height" constant="16" id="ird-lD-oDQ"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" ambiguous="YES" text="damage if a spell is played." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6E-7C-vUj">
+                                <rect key="frame" x="64" y="275.5" width="243" height="23.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="24" id="SpC-wi-Ism"/>
+                                    <constraint firstAttribute="width" constant="243" id="bnu-t9-nHe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.1998242029" green="0.56461037199999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -1239,7 +1239,7 @@
                             <constraint firstItem="CuK-i2-o9M" firstAttribute="leading" secondItem="kDr-8P-3qk" secondAttribute="leading" id="Xdv-zt-ycG"/>
                             <constraint firstItem="7WJ-to-wjh" firstAttribute="top" relation="lessThanOrEqual" secondItem="QtK-kC-X1J" secondAttribute="bottom" constant="17" id="YNl-8n-bse"/>
                             <constraint firstItem="Qjb-AS-hVr" firstAttribute="leading" secondItem="nug-MS-oxF" secondAttribute="leading" id="aeR-6q-75O"/>
-                            <constraint firstItem="B6E-7C-vUj" firstAttribute="top" secondItem="Qjb-AS-hVr" secondAttribute="bottom" constant="-3.5" id="aol-qk-vTe"/>
+                            <constraint firstItem="B6E-7C-vUj" firstAttribute="top" secondItem="Qjb-AS-hVr" secondAttribute="bottom" id="aol-qk-vTe"/>
                             <constraint firstItem="Qjb-AS-hVr" firstAttribute="leading" secondItem="B6E-7C-vUj" secondAttribute="leading" id="ebD-ZU-LE6"/>
                             <constraint firstItem="EcI-be-bDL" firstAttribute="leading" secondItem="7WJ-to-wjh" secondAttribute="leading" id="eiv-hS-LQf"/>
                             <constraint firstItem="Qjb-AS-hVr" firstAttribute="top" secondItem="nug-MS-oxF" secondAttribute="top" id="fgI-aO-iAW"/>
@@ -1252,7 +1252,7 @@
                             <constraint firstItem="sgy-bE-bK4" firstAttribute="top" secondItem="BqP-mM-iIq" secondAttribute="bottom" constant="25" id="pKv-5t-I4D"/>
                             <constraint firstItem="hKm-Hf-FyL" firstAttribute="top" relation="lessThanOrEqual" secondItem="sR6-GT-fvu" secondAttribute="bottom" constant="34" id="rB8-KP-haQ"/>
                             <constraint firstItem="Re1-ua-4G2" firstAttribute="bottom" secondItem="pCj-eT-NIL" secondAttribute="bottom" id="ryg-6x-uVY"/>
-                            <constraint firstItem="EcI-be-bDL" firstAttribute="top" secondItem="hKm-Hf-FyL" secondAttribute="bottom" constant="6" id="tBk-Bu-gek"/>
+                            <constraint firstItem="EcI-be-bDL" firstAttribute="top" secondItem="hKm-Hf-FyL" secondAttribute="bottom" constant="4" id="tBk-Bu-gek"/>
                             <constraint firstItem="BqP-mM-iIq" firstAttribute="top" relation="lessThanOrEqual" secondItem="7WJ-to-wjh" secondAttribute="bottom" constant="38" id="vKE-Ym-TfA"/>
                             <constraint firstItem="sR6-GT-fvu" firstAttribute="leading" secondItem="pCj-eT-NIL" secondAttribute="leading" id="wLS-mI-ZRh"/>
                             <constraint firstItem="ecM-pF-okl" firstAttribute="top" relation="lessThanOrEqual" secondItem="B6E-7C-vUj" secondAttribute="bottom" constant="42" id="ycE-1Z-8LU"/>
