--- a/Spellthrowers/Base.lproj/Main_iPhone.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPhone.storyboard
@@ -1709,6 +1709,9 @@
                                     <segue destination="SEj-FN-gUh" kind="modal" id="Tbl-ES-a5F"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="x2.png" translatesAutoresizingMaskIntoConstraints="NO" id="W3s-Gu-Cvw">
+                                <rect key="frame" x="150" y="124" width="54" height="40"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.53456668125490081" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -1780,6 +1783,7 @@
                         <outlet property="transition_currentCard2" destination="HAj-Dl-5oU" id="W2V-43-8P1"/>
                         <outlet property="transition_defendingPlayer" destination="QZR-XY-wha" id="1q2-IK-rCi"/>
                         <outlet property="transition_defendingPlayer2" destination="nTP-hP-tKq" id="ok9-XO-yn1"/>
+                        <outlet property="x2" destination="W3s-Gu-Cvw" id="4kf-QK-EmF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTV-Zi-VV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1803,6 +1807,7 @@
         <image name="scrumMini.png" width="20" height="30"/>
         <image name="spellShieldCard.png" width="83" height="134"/>
         <image name="waterfallCard.png" width="82" height="133"/>
+        <image name="x2.png" width="734" height="585"/>
         <image name="zapCard.png" width="82" height="133"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -1811,9 +1816,9 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="2TN-sa-4hd"/>
-        <segue reference="Vqs-rg-jIN"/>
-        <segue reference="rE4-7a-bw7"/>
+        <segue reference="DED-7D-nDF"/>
         <segue reference="tjg-hy-4SB"/>
+        <segue reference="Tbl-ES-a5F"/>
+        <segue reference="Vqs-rg-jIN"/>
     </inferredMetricsTieBreakers>
 </document>
